# focusBreakerv2

./: .gitignore  CHANGELOG.md  dev.py  main.py  pyproject.toml  requirements.txt
docs/: README.md  specification.md
focusbreaker/: config.py  main.py
focusbreaker/core/: break_activities.py  escape_hatch.py  hot_reload.py  mode_controller.py  scheduler.py  session_manager.py  streak_manager.py  timer.py
focusbreaker/data/: db.py  models.py
focusbreaker/system/: __init__.py  audio.py  display.py  input_blocker.py  media_manager.py
focusbreaker/ui/: achievements_modal.py  analytics_dialog.py  break_window.py  floating_session.py  main_window.py  session_end_dialog.py  session_view.py  settings_dialog.py  setup_dialog.py  splash_screen.py  streak_celebration.py  styles.py  task_dialog.py  tray_icon.py
focusbreaker/ui/components/: completion_modal.py  dialogs.py  progress_ring.py
tests/: conftest.py
tests/integration/: test_system_integration.py
tests/ui/: test_achievements_modal.py  test_main_window.py  test_settings_dialog.py  test_task_dialog.py
tests/unit/: test_audio.py  test_break_activities.py  test_db.py  test_display.py  test_escape_hatch.py  test_main_window.py  test_media_manager.py  test_mode_controller.py  test_scheduler.py  test_session_manager.py  test_streak_manager.py  test_task_dialog.py  test_timer.py
